feat(rpp): validate read response schemas
Refs #187
